# dash-spa

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Docker.dev  Dockerfile  LICENSE  MANIFEST.in  README.TEST.md  README.md  app.py  dataclass_exp.py  db.sqlite  flask_app.py  index.py  junk.py  landing-page.md  main.py  minimum-requirments.txt  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  requires-admin.txt  requires-dev.txt  requires-diskcache.txt  requires-install.txt  requires-redis.txt  requirments.txt  server.py  session_example.py  settings.py  setup.py  simple.py  tasks.py  tox.ini  usage.py  waitress_server.py  wsgi.py
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  init.sh  pypicloud-init.sh
admin/: __init__.py  _version.py  login_manager.py  template_mailer.py
config/: default.json  spa_config.ini  spa_config.plusnet.ini  spa_config.test.ini
dash_spa/: __init__.py  _version.py  alert.py  callback.py  component_id.py  context_state.py  cookies.py  decorators.py  exceptions.py  local_storage.py  logging.py  navbar.py  notyf.py  page_not_found.py  spa.py  spa_blueprint.py  spa_blueprint_app_group.py  spa_components.py  spa_config.py  spa_context.py  spa_current_app.py  spa_current_user.py  spa_dependency.py  spa_exceptions.py  spa_form.py  spa_globals.py  spa_location.py  spa_pages.py  spa_prefix.py  spa_session.py  spa_url.py  spa_widget.py  themes.py
dash_spa_admin/: __init__.py  admin_navbar.py  admin_page.py  decorators.py  exceptions.py  login_manager.py  synchronised_cache.py  template_mailer.py
(+334 files in other folders)
